feat: データベースに接続・YAML設定を読み込み
